--- a/mvload/build.gradle
+++ b/mvload/build.gradle
@@ -25,19 +25,33 @@ android {
 
 }
 
+ext {
+
+    rxAndroidVersion = '2.0.2'
+    rxKotlinVersion = '2.1.0'
+    kotlinVersion = '1.2.51'
+    junitVersion = '4.12'
+    supportTestRunnerVersion = '1.0.2'
+    mockitoVersion = '2.8.47'
+    supportLibraryVersion = '28.0.0-rc02'
+
+
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation "com.android.support:appcompat-v7:${supportLibraryVersion}"
 
-    implementation "io.reactivex.rxjava2:rxandroid:2.0.2"
-    implementation "io.reactivex.rxjava2:rxkotlin:2.1.0"
+    implementation "io.reactivex.rxjava2:rxandroid:${rxAndroidVersion}"
+    implementation "io.reactivex.rxjava2:rxkotlin:${rxKotlinVersion}"
 
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
-    testImplementation 'junit:junit:4.12'
+    testImplementation "junit:junit:${junitVersion}"
 
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    androidTestImplementation "com.android.support.test:runner:${supportTestRunnerVersion}"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
+    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
+
 
 }
 repositories {
