--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@
 
 buildscript {
     ext.kotlin_version = '1.2.70'
-    ext.kotlin_version = '1.2.50'
     repositories {
         google()
         jcenter()
@@ -15,6 +14,8 @@ buildscript {
         // in the individual module build.gradle files
     }
 }
+apply from:'dependencies.gradle'
+
 
 allprojects {
     repositories {
