enhancement item view

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
 
     // Gson
     implementation othersDependencies.gson
+    implementation othersDependencies.circleImageView
 
     //Testing
     implementation testingDependencies.espressoIdlingResource
